--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -19,6 +19,8 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^14.5.8"
+    "got": "^10.2.1",
+    "graphql": "^14.5.8",
+    "lodash": "^4.17.15"
   }
 }
